fixed workspace overflow issue; project refactor

--- a/src/index.css
+++ b/src/index.css
@@ -20,8 +20,7 @@
   margin: 0;
   padding: 0;
   border: none;
-}
 
-.root {
-  height: 100vh;
+  /* fixed: overflow issues from workspace */
+  overflow: hidden;
 }
