--- a/src/workspace/Workspace.module.css
+++ b/src/workspace/Workspace.module.css
@@ -38,6 +38,8 @@ textarea.textEditor {
   font-weight: 400;
   line-height: 1.7;
   color: var(--color-gray-300);
+  overflow: auto;
+  scrollbar-gutter: stable;
 }
 
 .previewContent {
@@ -49,57 +51,52 @@ textarea.textEditor {
   color: var(--color-gray-300);
   padding: 20px;
   overflow: auto;
+  scrollbar-gutter: stable;
 }
 
-.sectionSeparator {
-  width: 1px;
-  flex: none;
-  background-color: var(--color-gray-500);
-}
-
-.previewArea>* {
+.previewContent>* {
   margin-bottom: 20px;
 }
 
-.previewArea :where(h1, h3, h4, h5, blockquote) {
+.previewContent :where(h1, h3, h4, h5, blockquote) {
   font-weight: 700;
   color: var(--color-white);
 }
 
-.previewArea h2 {
+.previewContent h2 {
   font-weight: 300;
   color: var(--color-white);
 }
 
-.previewArea h6 {
+.previewContent h6 {
   font-weight: 700;
   color: var(--color-orange-600);
 }
 
-.previewArea :where(h1, h2, h3, h4, h5, h6) {
+.previewContent :where(h1, h2, h3, h4, h5, h6) {
   line-height: 1.3;
 }
 
-.previewArea a {
+.previewContent a {
   color: inherit;
 }
 
-.previewArea li {
+.previewContent li {
   list-style-position: inside;
 }
 
-.previewArea code {
+.previewContent code {
   font-family: 'Roboto Mono', monospace;
   color: var(--color-white);
 }
 
-.previewArea blockquote,
+.previewContent blockquote,
 pre {
   background-color: var(--color-gray-700);
   padding: 25px;
   border-radius: 4px;
 }
 
-.previewArea blockquote {
+.previewContent blockquote {
   border-left: 4px solid var(--color-orange-600);
 }
